Working on CSS beautification

--- a/.jsbeautifyrc
+++ b/.jsbeautifyrc
@@ -26,7 +26,8 @@
 		"preserve_newlines": true
 	},
 	"css": {
-		"indent_character": "\t",
-		"indent_size": 1
+		"indent_char": "\t",
+		"indent_size": 1,
+		"file_types": [".less"]
 	}
 }
