--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
 		"reinstall": "rm -rf node_modules;npm install",
 		"build-docs": "./node_modules/gulp/bin/gulp.js jsdoc",
 		"build": "./node_modules/gulp/bin/gulp.js build",
+		"aws": "./node_modules/gulp/bin/gulp.js aws",
 		"dev": "NODE_ENV=development ./node_modules/gulp/bin/gulp.js dev",
 		"test": "./node_modules/gulp/bin/gulp.js test",
 		"postinstall": "./node_modules/gulp/bin/gulp.js json",
-		"postuninstall": "./node_modules/gulp/bin/gulp.js json"
+		"postuninstall": "./node_modules/gulp/bin/gulp.js json",
+		"start": "node ./lib/index.js"
 	},
 	"repository": {
 		"type": "git",
@@ -35,9 +37,9 @@
 		"gulp-postcss": "^5.1.6",
 		"html-minifier": "^0.7.0",
 		"lodash": "^3.9.0",
+		"node-env-file": "^0.1.7",
 		"normalize.css": "^3.0.2",
-		"serve-favicon": "^2.2.0",
-		"node-env-file": "^0.1.7"
+		"serve-favicon": "^2.2.0"
 	},
 	"browser": {
 		"config": "./config/index.js"
@@ -48,14 +50,19 @@
 	},
 	"browserify": {
 		"transform": [
+			[
+				"reactify", {
+					"es6": true
+				}
+			],
 			"envify",
-			"uglifyify",
-			"reactify"
+			"uglifyify"
 		]
 	},
 	"devDependencies": {
+		"aws-sdk": "^2.1.38",
 		"backbone": "^1.1.2",
-		"browser-sync": "2.7.1",
+		"browser-sync": "2.7.13",
 		"browserify": "^10.2.0",
 		"envify": "^3.4.0",
 		"gulp": "git://github.com/gulpjs/gulp.git#4.0",
@@ -64,7 +71,6 @@
 		"gulp-concat": "^2.4.1",
 		"gulp-cssbeautify": "^0.1.3",
 		"gulp-eol": "^0.1.1",
-		"gulp-flatten": "0.0.4",
 		"gulp-jsbeautifier": "1.0.0",
 		"gulp-jsdoc": "^0.1.4",
 		"gulp-jshint": "^1.8.6",
@@ -84,16 +90,19 @@
 		"hbsfy": "^2.2.0",
 		"html": "0.0.10",
 		"http-proxy": "^1.11.1",
+		"ismobilejs": "^0.3.8",
 		"jquery": "^2.1.3",
 		"js-beautify": "^1.5.5",
 		"jshint-stylish": "^2.0.0",
 		"less-plugin-autoprefix": "^1.4.0",
 		"moment": "^2.10.3",
-		"preprocessify": "0.0.3",
 		"pretty-hrtime": "^1.0.0",
 		"prettydiff": "^1.12.8",
 		"react": "^0.13.1",
+		"react-drive-in": "^1.5.0",
 		"reactify": "^1.1.0",
+		"recursive-readdir": "^1.2.1",
+		"request": "^2.58.0",
 		"uglifyify": "^3.0.1",
 		"vinyl-buffer": "^1.0.0",
 		"vinyl-source-stream": "^1.0.0",
