--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 	"description": "This is a boilerplate repo I use when I want to spin up a new Node.JS project.",
 	"main": "lib/index.js",
 	"scripts": {
+		"setup": "npm install npm-cache -g",
 		"beautify": "./node_modules/gulp/bin/gulp.js beautify",
-		"reinstall": "rm -rf node_modules;npm install",
-		"build-docs": "./node_modules/gulp/bin/gulp.js jsdoc",
+		"reinstall": "rm -rf node_modules;npm-cache install || npm install",
+		"docs": "./node_modules/gulp/bin/gulp.js jsdoc",
 		"build": "./node_modules/gulp/bin/gulp.js build",
 		"aws": "./node_modules/gulp/bin/gulp.js aws",
 		"dev": "NODE_ENV=development ./node_modules/gulp/bin/gulp.js dev",
@@ -26,7 +27,6 @@
 	},
 	"homepage": "https://github.com/spencerbeggs/seedling#readme",
 	"dependencies": {
-		"autoprefixer-core": "^5.1.7",
 		"body-parser": "^1.12.2",
 		"compression": "^1.4.3",
 		"cookie-parser": "^1.3.3",
@@ -34,7 +34,6 @@
 		"express": "^4.11.0",
 		"express-device": "^0.3.11",
 		"express-handlebars": "^2.0.1",
-		"gulp-postcss": "^5.1.6",
 		"html-minifier": "^0.7.0",
 		"lodash": "^3.9.0",
 		"node-env-file": "^0.1.7",
@@ -66,10 +65,7 @@
 		"browserify": "^10.2.0",
 		"envify": "^3.4.0",
 		"gulp": "git://github.com/gulpjs/gulp.git#4.0",
-		"gulp-autoprefixer": "^2.1.0",
-		"gulp-beautify": "^1.1.0",
 		"gulp-concat": "^2.4.1",
-		"gulp-cssbeautify": "^0.1.3",
 		"gulp-eol": "^0.1.1",
 		"gulp-jsbeautifier": "1.0.0",
 		"gulp-jsdoc": "^0.1.4",
@@ -90,16 +86,13 @@
 		"hbsfy": "^2.2.0",
 		"html": "0.0.10",
 		"http-proxy": "^1.11.1",
-		"ismobilejs": "^0.3.8",
 		"jquery": "^2.1.3",
-		"js-beautify": "^1.5.5",
 		"jshint-stylish": "^2.0.0",
 		"less-plugin-autoprefix": "^1.4.0",
 		"moment": "^2.10.3",
 		"pretty-hrtime": "^1.0.0",
 		"prettydiff": "^1.12.8",
 		"react": "^0.13.1",
-		"react-drive-in": "^1.5.0",
 		"reactify": "^1.1.0",
 		"recursive-readdir": "^1.2.1",
 		"request": "^2.58.0",
