--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
 	"devDependencies": {
 		"aws-sdk": "^2.1.38",
 		"backbone": "^1.1.2",
-		"browser-sync": "2.7.13",
-		"browserify": "^10.2.0",
+		"browser-sync": "^2.8.0",
+		"browserify": "^11.0.0",
 		"envify": "^3.4.0",
 		"gulp": "git://github.com/gulpjs/gulp.git#4.0",
 		"gulp-concat": "^2.4.1",
 		"gulp-eol": "^0.1.1",
-		"gulp-jsbeautifier": "1.0.0",
+		"gulp-jsbeautifier": "1.0.1",
 		"gulp-jsdoc": "^0.1.4",
 		"gulp-jshint": "^1.8.6",
 		"gulp-json-format": "^1.0.0",
