--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
 	},
 	"homepage": "https://github.com/spencerbeggs/seedling#readme",
 	"dependencies": {
-		"body-parser": "^1.12.2",
-		"compression": "^1.4.3",
-		"cookie-parser": "^1.3.3",
-		"dynamic-reverse-proxy": "^0.6.0",
-		"express": "^4.11.0",
-		"express-device": "^0.3.11",
+		"body-parser": "^1.14.1",
+		"compression": "^1.6.0",
+		"cookie-parser": "^1.4.0",
+		"dynamic-reverse-proxy": "^0.7.0-alpha2",
+		"express": "^4.13.3",
+		"express-device": "^0.4.2",
 		"express-handlebars": "^2.0.1",
-		"html-minifier": "^0.7.0",
-		"lodash": "^3.9.0",
+		"html-minifier": "^0.8.0",
+		"lodash": "^3.10.1",
 		"node-env-file": "^0.1.7",
 		"normalize.css": "^3.0.2",
 		"serve-favicon": "^2.2.0"
@@ -50,8 +50,7 @@
 	"browserify": {
 		"transform": [
 			[
-				"reactify",
-				{
+				"reactify", {
 					"es6": true
 				}
 			],
@@ -60,46 +59,50 @@
 		]
 	},
 	"devDependencies": {
-		"aws-sdk": "^2.1.38",
-		"backbone": "^1.1.2",
-		"browser-sync": "^2.8.0",
-		"browserify": "^11.0.0",
+		"aws-sdk": "^2.2.6",
+		"babel": "^5.8.23",
+		"babel-runtime": "^5.8.25",
+		"babelify": "^6.3.0",
+		"backbone": "^1.2.3",
+		"browser-sync": "^2.9.8",
+		"browserify": "^11.2.0",
 		"envify": "^3.4.0",
 		"gulp": "git://github.com/gulpjs/gulp.git#4.0",
+		"gulp-babel": "^5.2.1",
 		"gulp-concat": "^2.4.1",
 		"gulp-eol": "^0.1.1",
 		"gulp-jsbeautifier": "1.0.1",
-		"gulp-jsdoc": "^0.1.4",
+		"gulp-jsdoc": "^0.1.5",
 		"gulp-jshint": "^1.8.6",
 		"gulp-json-format": "^1.0.0",
 		"gulp-less": "^3.0.2",
-		"gulp-minify-css": "^1.0.0",
-		"gulp-nodemon": "^2.0.2",
+		"gulp-minify-css": "^1.2.1",
+		"gulp-nodemon": "^2.0.4",
 		"gulp-notify": "^2.0.0",
 		"gulp-plumber": "^1.0.1",
 		"gulp-prettydiff": "^1.0.0",
 		"gulp-rename": "^1.2.0",
-		"gulp-sourcemaps": "^1.5.1",
+		"gulp-sourcemaps": "^1.6.0",
 		"gulp-strip-debug": "^1.0.1",
-		"gulp-uglify": "^1.0.1",
+		"gulp-uglify": "^1.4.1",
 		"gulp-util": "^3.0.6",
-		"gulp-watch": "^4.2.4",
-		"hbsfy": "^2.2.0",
+		"gulp-watch": "^4.3.5",
+		"hbsfy": "^2.3.1",
 		"html": "0.0.10",
-		"http-proxy": "^1.11.1",
+		"http-proxy": "^1.11.2",
 		"jquery": "^2.1.3",
 		"jshint-stylish": "^2.0.0",
-		"less-plugin-autoprefix": "^1.4.0",
-		"moment": "^2.10.3",
-		"pretty-hrtime": "^1.0.0",
-		"prettydiff": "^1.12.8",
+		"less-plugin-autoprefix": "^1.5.1",
+		"moment": "^2.10.6",
+		"pretty-hrtime": "^1.0.1",
+		"prettydiff": "^1.14.4",
 		"react": "^0.13.1",
 		"reactify": "^1.1.0",
 		"recursive-readdir": "^1.2.1",
-		"request": "^2.58.0",
+		"request": "^2.64.0",
 		"uglifyify": "^3.0.1",
 		"vinyl-buffer": "^1.0.0",
 		"vinyl-source-stream": "^1.0.0",
-		"watchify": "^3.2.1"
+		"watchify": "^3.4.0"
 	}
 }
