--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"beautify": "./node_modules/gulp/bin/gulp.js beautify",
 		"reinstall": "rm -rf node_modules;npm-cache install || npm install",
 		"docs": "./node_modules/gulp/bin/gulp.js jsdoc",
-		"build": "./node_modules/gulp/bin/gulp.js build",
+		"build": "NODE_ENV=production ./node_modules/gulp/bin/gulp.js build",
 		"aws": "./node_modules/gulp/bin/gulp.js aws",
 		"dev": "NODE_ENV=development ./node_modules/gulp/bin/gulp.js dev",
 		"test": "./node_modules/gulp/bin/gulp.js test",
@@ -30,10 +30,11 @@
 		"body-parser": "^1.14.1",
 		"compression": "^1.6.0",
 		"cookie-parser": "^1.4.0",
-		"dynamic-reverse-proxy": "^0.7.0-alpha2",
+		"dynamic-reverse-proxy": "^0.7.0-alpha3",
 		"express": "^4.13.3",
 		"express-device": "^0.4.2",
 		"express-handlebars": "^2.0.1",
+		"gulp-if": "^2.0.0",
 		"html-minifier": "^0.8.0",
 		"lodash": "^3.10.1",
 		"node-env-file": "^0.1.7",
@@ -59,18 +60,21 @@
 		]
 	},
 	"devDependencies": {
-		"aws-sdk": "^2.2.6",
+		"aws-sdk": "^2.2.7",
 		"babel": "^5.8.23",
 		"babel-runtime": "^5.8.25",
 		"babelify": "^6.3.0",
 		"backbone": "^1.2.3",
-		"browser-sync": "^2.9.8",
+		"bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-alpha",
+		"browser-sync": "^2.9.10",
 		"browserify": "^11.2.0",
 		"envify": "^3.4.0",
 		"gulp": "git://github.com/gulpjs/gulp.git#4.0",
+		"gulp-autoprefixer": "^3.0.2",
 		"gulp-babel": "^5.2.1",
 		"gulp-concat": "^2.4.1",
 		"gulp-eol": "^0.1.1",
+		"gulp-if": "^2.0.0",
 		"gulp-jsbeautifier": "1.0.1",
 		"gulp-jsdoc": "^0.1.5",
 		"gulp-jshint": "^1.8.6",
@@ -82,6 +86,7 @@
 		"gulp-plumber": "^1.0.1",
 		"gulp-prettydiff": "^1.0.0",
 		"gulp-rename": "^1.2.0",
+		"gulp-sass": "^2.0.4",
 		"gulp-sourcemaps": "^1.6.0",
 		"gulp-strip-debug": "^1.0.1",
 		"gulp-uglify": "^1.4.1",
@@ -95,7 +100,7 @@
 		"less-plugin-autoprefix": "^1.5.1",
 		"moment": "^2.10.6",
 		"pretty-hrtime": "^1.0.1",
-		"prettydiff": "^1.14.4",
+		"prettydiff": "^1.14.5",
 		"react": "^0.13.1",
 		"reactify": "^1.1.0",
 		"recursive-readdir": "^1.2.1",
