--- a/package.json
+++ b/package.json
@@ -113,5 +113,17 @@
 		"vinyl-buffer": "^1.0.0",
 		"vinyl-source-stream": "^1.0.0",
 		"watchify": "^3.6.0"
-	}
+	},
+	"browserify": {
+      "transform": [
+        [
+          "reactify",
+          {
+            "es6": true
+          }
+        ],
+        "envify",
+        "uglifyify"
+      ]
+    }
 }
