--- a/package.json
+++ b/package.json
@@ -1,129 +1,123 @@
 {
-	"name": "seedling",
-	"version": "0.0.0",
-	"description": "This is a boilerplate repo I use when I want to spin up a new Node.JS project.",
-	"main": "lib/index.js",
-	"scripts": {
-		"quickstart": "npm run setup && npm run reinstall && npm run dev",
-		"setup": "npm install npm-cache -g",
-		"atom-plugins": "apm install esformatter react",
-		"beautify": "./node_modules/gulp/bin/gulp.js beautify",
-		"reinstall": "rm -rf node_modules;npm-cache install npm || npm install",
-		"docs": "./node_modules/gulp/bin/gulp.js jsdoc",
-		"build-prod": "NODE_ENV=production ./node_modules/gulp/bin/gulp.js build",
-		"refreeze": "rm -f npm-shrikwrap.json && npm run reinstall && npm shrinkwrap --dev",
-		"build": "./node_modules/gulp/bin/gulp.js build",
-		"aws": "./node_modules/gulp/bin/gulp.js aws",
-		"dev": "NODE_ENV=development ./node_modules/gulp/bin/gulp.js dev",
-		"json": "./node_modules/gulp/bin/gulp.js json",
-		"test": "./node_modules/gulp/bin/gulp.js test",
-		"postinstall": "./node_modules/gulp/bin/gulp.js json",
-		"postuninstall": "./node_modules/gulp/bin/gulp.js json",
-		"prod": "NODE_ENV=production node ./lib/index.js",
-		"start": "node ./lib/index.js"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/spencerbeggs/seedling.git"
-	},
-	"author": "C. Spencer Beggs <spencer@beg.gs>",
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/spencerbeggs/seedling/issues"
-	},
-	"homepage": "https://github.com/spencerbeggs/seedling#readme",
-	"dependencies": {
-		"body-parser": "^1.14.1",
-		"compression": "^1.6.0",
-		"cookie-parser": "^1.4.0",
-		"dynamic-reverse-proxy": "^0.7.0-alpha3",
-		"express": "^4.13.3",
-		"express-device": "^0.4.2",
-		"express-handlebars": "^2.0.1",
-		"html-minifier": "^1.0.0",
-		"lodash": "^3.10.1",
-		"node-env-file": "^0.1.7",
-		"normalize.css": "^3.0.2",
-		"serve-favicon": "^2.2.0"
-	},
-	"browser": {
-		"config": "./config/index.js"
-	},
-	"engines": {
-		"node": "5.x",
-		"npm": "2.x"
-	},
-	"devDependencies": {
-		"aws-sdk": "^2.2.15",
-		"babel-eslint": "^4.1.3",
-		"babel-preset-es2015": "^6.0.15",
-		"babel-preset-react": "^6.0.15",
-		"babelify": "^7.2.0",
-		"backbone": "^1.2.3",
-		"bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-alpha",
-		"browser-sync": "^2.9.10",
-		"browserify": "^12.0.0",
-		"browserify-data": "^0.2.0",
-		"envify": "^3.4.0",
-		"eslint": "^1.8.0",
-		"eslint-config-airbnb": "^0.1.0",
-		"eslint-config-es2015-react": "^0.1.2",
-		"eslint-plugin-babel": "^2.1.1",
-		"eslint-plugin-react": "^3.6.3",
-		"gulp": "gulpjs/gulp#4.0",
-		"gulp-autoprefixer": "^3.0.2",
-		"gulp-babel": "^6.0.0",
-		"gulp-concat": "^2.4.1",
-		"gulp-eol": "^0.1.1",
-		"gulp-esdoc": "^0.1.0",
-		"gulp-esformatter": "^4.0.0",
-		"gulp-eslint": "^1.0.0",
-		"gulp-if": "^2.0.0",
-		"gulp-jsbeautifier": "1.0.1",
-		"gulp-jscs": "^3.0.2",
-		"gulp-jsdoc": "^0.1.5",
-		"gulp-json-format": "^1.0.0",
-		"gulp-less": "^3.0.2",
-		"gulp-minify-css": "^1.2.1",
-		"gulp-nodemon": "^2.0.4",
-		"gulp-notify": "^2.0.0",
-		"gulp-plumber": "^1.0.1",
-		"gulp-prettydiff": "^1.0.0",
-		"gulp-rename": "^1.2.0",
-		"gulp-sass": "^2.0.4",
-		"gulp-sourcemaps": "^1.6.0",
-		"gulp-strip-debug": "^1.0.1",
-		"gulp-uglify": "^1.4.1",
-		"gulp-util": "^3.0.6",
-		"gulp-watch": "^4.3.5",
-		"hbsfy": "^2.3.1",
-		"html": "0.0.10",
-		"http-proxy": "^1.11.2",
-		"jquery": "^2.1.3",
-		"less-plugin-autoprefix": "^1.5.1",
-		"moment": "^2.10.6",
-		"pretty-hrtime": "^1.0.1",
-		"prettydiff": "^1.14.7",
-		"react": "^0.14.2",
-		"react-dom": "^0.14.2",
-		"reactify": "^1.1.0",
-		"recursive-readdir": "^1.2.1",
-		"request": "^2.64.0",
-		"uglifyify": "^3.0.1",
-		"vinyl-buffer": "^1.0.0",
-		"vinyl-source-stream": "^1.0.0",
-		"watchify": "^3.6.0"
-	},
-	"browserify": {
-      "transform": [
-        [
-          "reactify",
-          {
-            "es6": true
-          }
-        ],
-        "envify",
-        "uglifyify"
-      ]
-    }
+  "name": "seedling",
+  "version": "0.0.0",
+  "description": "This is a boilerplate repo I use when I want to spin up a new Node.JS project.",
+  "main": "lib/index.js",
+  "scripts": {
+    "quickstart": "npm run setup && npm run reinstall && npm run dev",
+    "setup": "npm install npm-cache -g",
+    "atom-plugins": "apm install esformatter react",
+    "beautify": "./node_modules/gulp/bin/gulp.js beautify",
+    "reinstall": "rm -rf node_modules;npm-cache install npm || npm install",
+    "docs": "./node_modules/gulp/bin/gulp.js jsdoc",
+    "build-prod": "NODE_ENV=production ./node_modules/gulp/bin/gulp.js build",
+    "refreeze": "rm -f npm-shrikwrap.json && npm run reinstall && npm shrinkwrap --dev",
+    "build": "./node_modules/gulp/bin/gulp.js build",
+    "aws": "./node_modules/gulp/bin/gulp.js aws",
+    "dev": "NODE_ENV=development ./node_modules/gulp/bin/gulp.js dev",
+    "json": "./node_modules/gulp/bin/gulp.js json",
+    "test": "./node_modules/gulp/bin/gulp.js test",
+    "postinstall": "./node_modules/gulp/bin/gulp.js json",
+    "postuninstall": "./node_modules/gulp/bin/gulp.js json",
+    "prod": "NODE_ENV=production node ./lib/index.js",
+    "start": "node ./lib/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/spencerbeggs/seedling.git"
+  },
+  "author": "C. Spencer Beggs <spencer@beg.gs>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/spencerbeggs/seedling/issues"
+  },
+  "homepage": "https://github.com/spencerbeggs/seedling#readme",
+  "dependencies": {
+    "body-parser": "^1.14.1",
+    "compression": "^1.6.0",
+    "cookie-parser": "^1.4.0",
+    "dynamic-reverse-proxy": "^0.7.0-alpha3",
+    "express": "^4.13.3",
+    "express-device": "^0.4.2",
+    "express-handlebars": "^2.0.1",
+    "html-minifier": "^1.0.0",
+    "lodash": "^3.10.1",
+    "node-env-file": "^0.1.7",
+    "normalize.css": "^3.0.2",
+    "serve-favicon": "^2.2.0"
+  },
+  "browser": {
+    "config": "./config/index.js"
+  },
+  "engines": {
+    "node": "5.x",
+    "npm": "2.x"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.2.15",
+    "babel-eslint": "^4.1.3",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-react": "^6.0.15",
+    "babel-preset-stage-0": "^6.1.2",
+    "babelify": "^7.2.0",
+    "backbone": "^1.2.3",
+    "bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-alpha",
+    "browser-sync": "^2.9.10",
+    "browserify": "^12.0.0",
+    "browserify-data": "^0.2.0",
+    "envify": "^3.4.0",
+    "eslint": "^1.8.0",
+    "eslint-config-airbnb": "^0.1.0",
+    "eslint-config-es2015-react": "^0.1.2",
+    "eslint-plugin-babel": "^2.1.1",
+    "eslint-plugin-react": "^3.6.3",
+    "gulp": "gulpjs/gulp#4.0",
+    "gulp-autoprefixer": "^3.0.2",
+    "gulp-babel": "^6.0.0",
+    "gulp-concat": "^2.4.1",
+    "gulp-eol": "^0.1.1",
+    "gulp-esdoc": "^0.1.0",
+    "gulp-esformatter": "^4.0.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-if": "^2.0.0",
+    "gulp-jsbeautifier": "1.0.1",
+    "gulp-jscs": "^3.0.2",
+    "gulp-jsdoc": "^0.1.5",
+    "gulp-json-format": "^1.0.0",
+    "gulp-less": "^3.0.2",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-nodemon": "^2.0.4",
+    "gulp-notify": "^2.0.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-prettydiff": "^1.0.0",
+    "gulp-rename": "^1.2.0",
+    "gulp-sass": "^2.0.4",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-strip-debug": "^1.0.1",
+    "gulp-uglify": "^1.4.1",
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.5",
+    "gulp-webpack": "^1.5.0",
+    "hbsfy": "^2.3.1",
+    "history": "^1.13.0",
+    "html": "0.0.10",
+    "http-proxy": "^1.11.2",
+    "jquery": "^2.1.3",
+    "less-plugin-autoprefix": "^1.5.1",
+    "moment": "^2.10.6",
+    "pretty-hrtime": "^1.0.1",
+    "prettydiff": "^1.14.7",
+    "react": "^0.14.2",
+    "react-dom": "^0.14.2",
+    "react-mixin": "^3.0.3",
+    "react-router": "^1.0.0-rc4",
+    "reactify": "^1.1.0",
+    "recursive-readdir": "^1.2.1",
+    "request": "^2.64.0",
+    "uglifyify": "^3.0.1",
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.0.0",
+    "watchify": "^3.6.0",
+    "webpack": "^1.12.3"
+  }
 }
