Bootstrapping and test work

--- a/.jscsrc
+++ b/.jscsrc
@@ -34,7 +34,7 @@
 	"disallowPaddingNewlinesInBlocks": true,
 	"disallowParenthesesAroundArrowParam": true,
 	"disallowQuotedKeysInObjects": true,
-	"disallowSpaceAfterObjectKeys": true,
+	"disallowSpaceAfterObjectKeys": false,
 	"disallowSpaceAfterPrefixUnaryOperators": true,
 	"disallowSpaceBeforeComma": true,
 	"disallowSpaceBeforePostfixUnaryOperators": true,
@@ -56,7 +56,15 @@
 	"requireCamelCaseOrUpperCaseIdentifiers": false,
 	"requireCapitalizedConstructors": true,
 	"requireCommaBeforeLineBreak": true,
-	"requireCurlyBraces": true,
+	"requireCurlyBraces": [
+		"if",
+		"else",
+		"for",
+		"while",
+		"do",
+		"try",
+		"catch"
+	],
 	"requireDollarBeforejQueryAssignment": true,
 	"requireDotNotation": "except_snake_case",
 	"requireLineBreakAfterVariableAssignment": true,
