--- a/app/react/data.yml
+++ b/app/react/data.yml
@@ -1,6 +1,7 @@
 title: Social Media Marketing in 2015
-pages:
-  - title: Page One
-    question: How many marbles in the jar?
-  - title: Page Two
-    question: What's the frequency Kenneth?
+id: 62635482374
+set:
+	id: 1
+	- title: How much do you spend in capital improvemtns each year?
+		type: chose1
+			- $400
