--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash": "^3.10.1",
     "node-env-file": "^0.1.8",
     "normalize.css": "^3.0.2",
+    "redux-actions": "^0.8.0",
     "redux-thunk": "^1.0.0",
     "serve-favicon": "^2.2.0"
   },
@@ -78,6 +79,7 @@
     "babel-runtime": "^6.2.0",
     "babelify": "^7.2.0",
     "backbone": "^1.2.3",
+    "bluebird": "^3.0.6",
     "bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-alpha",
     "brfs": "^1.4.1",
     "browser-sync": "^2.10.0",
@@ -90,9 +92,9 @@
     "ejsify": "^1.0.0",
     "envify": "^3.4.0",
     "eslint": "^1.10.0",
-    "eslint-config-airbnb": "^1.0.0",
+    "eslint-config-airbnb": "^2.0.0",
     "eslint-config-es2015-react": "^0.1.2",
-    "eslint-plugin-babel": "^2.1.1",
+    "eslint-plugin-babel": "^3.0.0",
     "eslint-plugin-react": "^3.9.0",
     "faker": "^3.0.1",
     "flux": "^2.1.1",
@@ -127,7 +129,7 @@
     "gulp-watch": "^4.3.5",
     "gulp-zip": "^3.0.2",
     "hbsfy": "^2.3.1",
-    "history": "^1.13.1",
+    "history": "1.13.1",
     "html": "0.0.10",
     "http-proxy": "^1.11.2",
     "humps": "^1.0.0",
@@ -147,14 +149,15 @@
     "react-dom": "^0.14.3",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
-    "react-router": "^1.0.0",
+    "react-router": "^1.0.2",
     "recursive-readdir": "^1.2.1",
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
     "redux-filter": "^1.10.0",
     "redux-logger": "^2.0.4",
-    "redux-router": "^1.0.0-beta4",
-    "redux-simple-router": "0.0.8",
+    "redux-promise-middleware": "^2.3.1",
+    "redux-promise-thunk": "^0.1.4",
+    "redux-simple-router": "^1.0.0",
     "redux-thunk": "^1.0.0",
     "request": "^2.67.0",
     "selectn": "^0.10.0",
@@ -169,7 +172,7 @@
     "vinyl-transform": "^1.0.0",
     "watchify": "^3.6.1",
     "webpack": "^1.12.8",
-    "webpack-stream": "^2.1.1",
+    "webpack-stream": "^3.0.0",
     "whatwg-fetch": "^0.10.1"
   }
 }
