--- a/package.json
+++ b/package.json
@@ -146,10 +146,12 @@
     "prettydiff": "^1.15.17",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
+    "react-dnd": "^2.0.2",
     "react-dom": "^0.14.3",
     "react-pure-render": "^1.0.2",
     "react-redux": "^4.0.0",
     "react-router": "^1.0.2",
+    "react-tag-input": "^2.0.2",
     "recursive-readdir": "^1.2.1",
     "redux": "^3.0.4",
     "redux-devtools": "^2.1.5",
