--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
 		"babel-preset-stage-0": "^6.1.18",
 		"babelify": "^7.2.0",
 		"backbone": "^1.2.3",
-		"bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-alpha",
+		"bootstrap": "git://github.com/twbs/bootstrap.git#v4.0.0-alpha.2",
 		"brfs": "^1.4.1",
 		"browser-sync": "^2.10.0",
 		"browserify": "^12.0.1",
@@ -123,7 +123,7 @@
 		"gulp-watch": "^4.3.5",
 		"gulp-zip": "^3.0.2",
 		"hbsfy": "^2.3.1",
-		"history": "1.13.1",
+		"history": "^1.17.0",
 		"html": "0.0.10",
 		"http-proxy": "^1.11.2",
 		"jquery": "^2.1.3",
@@ -135,7 +135,6 @@
 		"normalizr": "^1.4.0",
 		"packageify": "^0.2.3",
 		"pretty-hrtime": "^1.0.1",
-		"prettydiff": "^1.15.17",
 		"react": "^0.14.3",
 		"react-bootstrap": "^0.28.1",
 		"react-dnd": "^2.0.2",
