--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0",
     "slug": "^0.9.1",
+    "speakingurl": "^8.0.0",
     "transform-loader": "^0.2.3",
     "uglify-loader": "^1.3.0",
     "uglifyify": "^3.0.1",
